--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>COVID-19 Awareness</title>
-    <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -13,6 +12,159 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <style>
+      body {
+        font-family: "Roboto", sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #e9ecef;
+      }
+      header {
+        background: #007bff;
+        color: #fff;
+        padding: 30px 0;
+        text-align: center;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+      }
+      nav {
+        display: flex;
+        justify-content: center;
+        background: #0056b3;
+      }
+      nav a {
+        color: #fff;
+        padding: 14px 20px;
+        text-decoration: none;
+        text-align: center;
+        transition: background 0.3s;
+        border-radius: 5px;
+        margin: 0 5px;
+      }
+      nav a:hover {
+        background: #003d80;
+        transform: scale(1.05);
+      }
+      section {
+        padding: 20px;
+        margin: 20px;
+        background: #fff;
+        border-radius: 10px;
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+        display: none;
+        animation: fadeIn 0.5s ease-in-out;
+      }
+      #home {
+        display: block;
+      }
+      .register-form,
+      .comment-form {
+        margin-top: 20px;
+      }
+      .register-form label,
+      .comment-form label {
+        display: block;
+        margin: 10px 0 5px;
+        color: #333;
+      }
+      .register-form input,
+      .comment-form input,
+      .register-form select,
+      .register-form textarea {
+        width: calc(100% - 20px);
+        padding: 10px;
+        margin-bottom: 15px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        transition: border 0.3s;
+      }
+      .register-form input:focus,
+      .register-form select:focus {
+        border: 2px solid #007bff;
+        outline: none;
+      }
+      .comments {
+        margin-top: 20px;
+      }
+      .comment {
+        background: #e7f1ff;
+        padding: 10px;
+        border-radius: 5px;
+        margin: 5px 0;
+      }
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+      footer {
+        text-align: center;
+        padding: 20px;
+        background: #007bff;
+        color: #fff;
+        position: relative;
+        bottom: 0;
+        width: 100%;
+        box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
+      }
+      img {
+        max-width: 100%;
+        height: auto;
+        border-radius: 10px;
+        margin-top: 10px;
+      }
+      h2,
+      h3 {
+        color: #007bff;
+      }
+      ul {
+        margin: 10px 0;
+        padding-left: 20px;
+        color: #555;
+      }
+      table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 20px;
+      }
+      th,
+      td {
+        border: 1px solid #ddd;
+        padding: 8px;
+        text-align: left;
+      }
+      th {
+        background-color: #007bff;
+        color: white;
+        transition: background 0.3s;
+      }
+      th:hover {
+        background-color: #0056b3;
+      }
+      tr:nth-child(even) {
+        background-color: #f2f2f2;
+      }
+      tr:hover {
+        background-color: #ddd;
+      }
+      .header-image {
+        width: 100%;
+        height: 250px;
+        object-fit: cover;
+        border-radius: 10px;
+      }
+      /* Responsive Design */
+      @media (max-width: 768px) {
+        nav {
+          flex-direction: column;
+        }
+        nav a {
+          margin: 5px 0;
+        }
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -30,6 +182,7 @@
       <a href="#registration" onclick="showSection('registration')"
         >Registration</a
       >
+      <a href="#comments" onclick="showSection('comments')">Comments</a>
       <a href="#viewRegistrations" onclick="showSection('viewRegistrations')"
         >View Registrations</a
       >
@@ -141,11 +294,7 @@
         in your area. This will help us keep you informed about the latest
         health guidelines and resources.
       </p>
-      <form
-        class="register-form"
-        id="registrationForm"
-        onsubmit="registerUser(event)"
-      >
+      <form class="register-form" id="registrationForm">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required />
 
@@ -188,6 +337,22 @@
           placeholder="Enter your ID number"
         />
 
+        <label for="state">State:</label>
+        <select id="state" name="state" required>
+          <option value="">Select State</option>
+          <option value="andhraPradesh">Andhra Pradesh</option>
+          <option value="maharashtra">Maharashtra</option>
+          <option value="karnataka">Karnataka</option>
+          <option value="tamilNadu">Tamil Nadu</option>
+          <option value="delhi">Delhi</option>
+          <option value="uttarPradesh">Uttar Pradesh</option>
+          <option value="gujarat">Gujarat</option>
+          <option value="rajasthan">Rajasthan</option>
+          <option value="kerala">Kerala</option>
+          <option value="westBengal">West Bengal</option>
+          <option value="bihar">Bihar</option>
+        </select>
+
         <label for="covidTestType">COVID-19 Test Type:</label>
         <select id="covidTestType" name="covidTestType" required>
           <option value="">Select Test Type</option>
@@ -202,44 +367,149 @@
         <label for="time">Time Slot:</label>
         <input type="time" id="time" name="time" required />
 
-        <input type="submit" value="Register" />
+        <input
+          type="submit"
+          value="Register"
+          style="
+            background-color: #28a745;
+            color: white;
+            border: none;
+            cursor: pointer;
+            transition: background 0.3s;
+          "
+        />
       </form>
-
-      <div id="registeredUsers" class="registered-users">
-        <h3>Registered Users:</h3>
-        <table>
-          <thead>
-            <tr>
-              <th>Name</th>
-              <th>Email</th>
-              <th>Gender</th>
-              <th>Mobile Number</th>
-              <th>Gov ID Type</th>
-              <th>Gov ID Number</th>
-              <th>COVID Test Type</th>
-              <th>Date</th>
-              <th>Time Slot</th>
-            </tr>
-          </thead>
-          <tbody id="registrationBody">
-            <!-- Registered users will be displayed here -->
-          </tbody>
-        </table>
-      </div>
     </section>
 
     <section id="viewRegistrations" class="fade-in">
-      <h2>View Registrations</h2>
+      <h2>Registered Person Details</h2>
       <p>
-        This section allows you to view all registered individuals. Information
-        is displayed above.
+        Below are the details of individuals who have registered for COVID-19
+        updates and vaccination drives:
       </p>
+      <table id="registrationTable">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Gender</th>
+            <th>Mobile Number</th>
+            <th>Gov ID Type</th>
+            <th>Gov ID Number</th>
+            <th>State</th>
+            <th>COVID Test Type</th>
+            <th>Date</th>
+            <th>Time Slot</th>
+          </tr>
+        </thead>
+        <tbody id="registrationBody">
+          <!-- Registered details will be populated here -->
+        </tbody>
+      </table>
+    </section>
+
+    <section id="comments" class="fade-in">
+      <h2>Comments</h2>
+      <p>
+        Your feedback is valuable to us. Share your thoughts or experiences
+        regarding COVID-19.
+      </p>
+      <form class="comment-form" id="commentForm">
+        <label for="comment">Comment:</label>
+        <textarea
+          id="comment"
+          name="comment"
+          rows="4"
+          required
+          placeholder="Your comments..."
+        ></textarea>
+        <input
+          type="submit"
+          value="Submit Comment"
+          style="
+            background-color: #007bff;
+            color: white;
+            border: none;
+            cursor: pointer;
+            transition: background 0.3s;
+          "
+        />
+      </form>
+      <div class="comments" id="commentsSection"></div>
     </section>
 
     <footer>
-      <p>&copy; 2024 COVID-19 Awareness. All Rights Reserved.</p>
+      <p>&copy; 2024 COVID-19 Awareness. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script>
+      let registrations = []; // Array to hold registration details
+
+      function showSection(sectionId) {
+        const sections = document.querySelectorAll("section");
+        sections.forEach((section) => {
+          section.style.display = "none";
+        });
+        document.getElementById(sectionId).style.display = "block";
+      }
+
+      document.getElementById("registrationForm").onsubmit = function (e) {
+        e.preventDefault();
+
+        const registrationData = {
+          name: document.getElementById("name").value,
+          email: document.getElementById("email").value,
+          gender: document.getElementById("gender").value,
+          mobile: document.getElementById("mobile").value,
+          govIdType: document.getElementById("govIdType").value,
+          govIdNumber: document.getElementById("govIdNumber").value,
+          state: document.getElementById("state").value,
+          covidTestType: document.getElementById("covidTestType").value,
+          date: document.getElementById("date").value,
+          time: document.getElementById("time").value,
+        };
+
+        registrations.push(registrationData); // Store the registration data
+        alert("Thank you for registering, " + registrationData.name + "!");
+        document.getElementById("registrationForm").reset();
+        updateRegistrationTable(); // Update the registration table
+      };
+
+      function updateRegistrationTable() {
+        const registrationBody = document.getElementById("registrationBody");
+        registrationBody.innerHTML = ""; // Clear the current table
+
+        registrations.forEach((registration) => {
+          const row = document.createElement("tr");
+          row.innerHTML = `
+                <td>${registration.name}</td>
+                <td>${registration.email}</td>
+                <td>${registration.gender}</td>
+                <td>${registration.mobile}</td>
+                <td>${registration.govIdType}</td>
+                <td>${registration.govIdNumber}</td>
+                <td>${registration.state}</td>
+                <td>${registration.covidTestType}</td>
+                <td>${registration.date}</td>
+                <td>${registration.time}</td>
+            `;
+          registrationBody.appendChild(row);
+        });
+      }
+
+      document.getElementById("commentForm").onsubmit = function (e) {
+        e.preventDefault();
+        const comment = document.getElementById("comment").value;
+        const commentsSection = document.getElementById("commentsSection");
+        const commentDiv = document.createElement("div");
+        commentDiv.classList.add("comment");
+        commentDiv.textContent = comment;
+        commentsSection.appendChild(commentDiv);
+        document.getElementById("commentForm").reset();
+      };
+
+      // Initially show the home section
+      showSection("home");
+    </script>
   </body>
 </html>
